tests/samples/positive/error_handling/try_expression_statement.ax
module try_expression_statement;

enum ResultI32I32: u8 {
    ok(i32) = 1,
    err(i32) = 2,
}

fn fail_if(value: i32) -> ResultI32I32 {
    if value < 0 {
        return ResultI32I32.err(7);
    }
    return ResultI32I32.ok(value);
}

fn check(value: i32) -> ResultI32I32 {
    fail_if(value)?;
    return ResultI32I32.ok(0);
}

fn main() -> i32 {
    let ok = check(1);
    let err = check(-1);
    let ok_code: i32 = match ok {
        .ok(value) => value,
        .err(code) => code,
    };
    let err_code: i32 = match err {
        .ok(value) => value,
        .err(code) => code,
    };
    if ok_code != 0 {
        return 1;
    }
    if err_code != 7 {
        return 2;
    }
    return 0;
}
