tests/samples/negative/pointers/paddr_non_pointer.ax
module paddr_non_pointer;

fn main() -> i32 {
    let value: i32 = paddr(i32, 0);
    return value;
}
